--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -13,7 +13,7 @@ fieldset {
     flex-wrap: wrap;
     flex-direction: column;
     font-style: bold;
-    color:#8D4E97;
+    color:black;
     padding: 15px;
     border: 7px solid #DA5178;
 }
